chore: sweetclass 合规

--- a/app/views/home/header.html
+++ b/app/views/home/header.html
@@ -7,7 +7,8 @@
 <meta name="keywords" content="leanote,leanote.com,蚂蚁笔记">
 <meta name="description" content="Leanote,蚂蚁笔记, {{msg $ "moto"}}">
 <meta name="author" content="leanote,蚂蚁笔记">
-<title>{{.title}}</title>
+<!-- <title>{{.title}}</title> -->
+<title>sweetclass.club</title>
 
 <link href="/css/bootstrap.css" rel="stylesheet">
 <link href="/css/font-awesome-4.2.0/css/font-awesome.css" rel="stylesheet">
@@ -47,9 +48,9 @@ function log(o) {
 
 			<ul class="nav navbar-nav navbar-left">
 				<li><a href="/index#" data-target="body" class="smooth-scroll">{{msg . "home"}}</a></li>
-				<li style="position: relative; margin-right: 3px;">
+				<!-- <li style="position: relative; margin-right: 3px;">
 					<a href="http://bbs.leanote.com" target="_blank" class="">{{msg . "discussion"}}</a>
-				</li>
+				</li> -->
 
 				<li><a id="leanoteBlog" href="http://lea.leanote.com" target="_blank" title="Leanote explore, leanote blog platform" class="">{{leaMsg . "Leanote Explore"}}</a></li>
 				<li><a id="leanoteApp" href="http://app.leanote.com" target="_blank" title="Leanote App" class="">{{msg . "desktopApp"}}</a></li>
