--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -7,7 +7,7 @@
 		<p>{{msg . "moto2"}}</p>
 		
 		<div>
-			<a class="btn btn-default btn-primary" href="/register">{{msg . "register"}}</a> 
+			<!-- <a class="btn btn-default btn-primary" href="/register">{{msg . "register"}}</a>  -->
 			&nbsp;
 			&nbsp;
 			{{if not .userInfo.UserId}}
@@ -16,7 +16,7 @@
 				&nbsp;
 			{{end}}
 			
-			<a class="btn btn-default" href="/demo">{{msg . "try"}}</a>
+			<!-- <a class="btn btn-default" href="/demo">{{msg . "try"}}</a> -->
 		</div>
 	</div>
 	
