--- a/app/views/home/footer.html
+++ b/app/views/home/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-md-6">
 				<i class="fa fa-envelope-o fa-3x icon-muted"></i>
@@ -13,12 +13,14 @@
 				<a href="https://github.com/leanote/leanote">Github</a> / <a href="http://leanote.leanote.com/post/Leanote-groups">QQ Group</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	
 	<div class="footer-leanote">
-		Copyright © <a href="https://leanote.com">Leanote</a>
+		Copyright © <a href="https://sweetclass.club">sweetclass.club</a>
 		<br/>
-		Proudly powered by <a href="https://leanote.com">Leanote</a>
+		Proudly powered by <a href="https://leanote.com" target="_blank">Leanote</a>
+		<br/>
+		<a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">粤ICP备19071179号-1</a>
 	</div>
 	
 </div>
