--- a/app/views/home/login.html
+++ b/app/views/home/login.html
@@ -44,7 +44,7 @@
 				<a href="#" id="github" class="btn btn-github btn-block m-b-sm"><i class="fa fa-github pull-left"></i>{{msg . "use"}} Github</a>
 				-->
 				
-				<div class="line line-dashed"></div>
+				<!--<div class="line line-dashed"></div>
 				
 				<p class="text-muted text-center"><small>{{msg . "hasAcount"}}</small></p>
 				
@@ -53,7 +53,7 @@
 				{{msg . "or"}}
 				{{end}}
 				
-				<a id="loginBtn" href="/demo" class="btn btn-default btn-block">{{msg . "try"}}</a>
+				<a id="loginBtn" href="/demo" class="btn btn-default btn-block">{{msg . "try"}}</a>-->
 			</form>	
 		</div>
     </div>
