--- a/app/views/home/footer.html
+++ b/app/views/home/footer.html
@@ -20,7 +20,7 @@
 		<br/>
 		Proudly powered by <a href="https://leanote.com" target="_blank">Leanote</a>
 		<br/>
-		<a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">粤ICP备19071179号-1</a>
+		<a href="https://beian.miit.gov.cn" target="_blank" rel="nofollow">粤ICP备19071179号</a>
 	</div>
 	
 </div>
